# TGB_opentarget

./: pyproject.toml
examples/linkproppred/thgl-opentargets/: edgebank.py  recurrencybaseline.py  sthn.py  tgn.py
tgb/datasets/thgl_opentargets/: investigate.ipynb  thgl_opentargets.py  thgl_opentargets_ns_gen.py
tgb/linkproppred/: dataset.py  thg_negative_generator.py
tgb/utils/: info.py  pre_process.py
